Hook up backend filterbuilding for export, review creation. (#773)
* Use backend filterbuilding for export. Pass out individual file results from export.

* Use backend filterbuilding for review creation.

* Handle null concept set list for export endpoint.

* Reuse filter builder logic for combining cohorts.